# mewgenics_breeding_helper

./: .commit_msg.txt  .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  MewgenicsBreedingHelper.spec  README.md  RELEASE_NOTES.md  justfile  pyproject.toml
.github/workflows/: build.yml
.opencode/skills/dearpygui/: SKILL.md
.opencode/skills/desloppify/: SKILL.md
.opencode/skills/imhex-pattern-language/: SKILL.md
.opencode/skills/jina-ai-pythondocs/: SKILL.md
docs/: breeding.md  breeding_notes.txt
imhex_patterns/: cat.hexpat  files_pedigree.hexpat
