[project]
name = "mewgenics_breeding_helper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
    "mewgenics_parser",
    "mewgenics_scorer",
    "mewgenics_room_optimizer",
]

[tool.uv.sources]
mewgenics_parser = { workspace = true }
mewgenics_scorer = { workspace = true }
mewgenics_room_optimizer = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
pythonpath = [
    "packages/mewgenics_scorer",
    "packages/mewgenics_parser",
    "packages/mewgenics_room_optimizer",
]
